# init_datascience_project

./: .dockerignore  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
tests/: test_init_project.py
