[tool.poetry]
name = "init_project"
version = "0.1.0"
description = ""
authors = ["alighandij <alighandij@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"
kafka-python = "^2.0.2"
pydantic = "^1.9.2"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
flake8-bugbear = "^22.7.1"
Flake8-pyproject = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
